# kappa

./: AGENTS.md  Integrating_MaxText_MoE_Strategies.md  MPS_PORTING_NOTES.md  QWEN3_MOE_IMPLEMENTATION_PLAN.md  advanced_kv_cache_strategies_maxtext.md  pyproject.toml
examples/: build_long_prompts.py
examples/prompts/: README.md  bitter_lesson.txt  flash.txt  jax_jit_caching.txt  jax_jit_compilation.txt  jax_static_args.txt  local_batch_prompts.txt  marketing_campaign.txt
kappa/: __init__.py  defaults.py
kappa/checkpoint/: __init__.py  orbax_flat.py  qwen_flat.py  qwen_hf_convert.py
kappa/gemma3/: __init__.py  architecture.py  attention_ops.py  block.py  ffn.py  generate.py  jit_inference.py  kv_cache.py  linear.py  load.py  masks.py  norms.py  positions.py  prefill.py  rope.py  sampling.py  serving.py  special_tokens.py  splash_prefill.py  transformer.py  weights.py
kappa/qwen3/: __init__.py  architecture.py  block.py  ffn.py  ffn_moe.py  generate.py  hf_tokenizer.py  jit_inference.py  linear.py  load.py  norms.py  quant.py  rope.py  sharding.py  special_tokens.py  transformer.py  weights.py
scripts/: download_hf_model.py  infer_gemma3_4b.py  infer_qwen3.py  verify_qwen3_moe_impls.py  verify_qwen3_prefill_chunk.py  verify_qwen3_quant.py
